# semantic-search-lib

./: LICENSE  README.md  cli.py  main.py  new_nooyab.csv  pyproject.toml  test.py
semantic_search/: __init__.py  data_processor.py  embeddings.py  search.py
semantic_search/backends/: __init__.py  chromadb_backend.py  cosine.py  faiss_backend.py  scann_backend.py
