[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_search"
version = "0.1.0"
description = "A flexible semantic search library with multiple backends"
authors = [
  { name = "Pouya Soltani", email = "your-email@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "sentence-transformers",
    "faiss-cpu",
    "fastapi",
    "uvicorn",
    "scikit-learn"
]
